--- a/static/styles.css
+++ b/static/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 .login-container {
-    background-color: #fff;
+    background-color: #000000;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -62,11 +62,16 @@ button:hover {
 }
 
 .flash.success {
-    background-color: #d4edda;
+    background-color: #16cd41;
     color: #155724;
 }
 
 .flash.danger {
     background-color: #f8d7da;
     color: #721c24;
+}
+
+
+#label{
+color:#fff;
 }
