--- a/templates/login.html
+++ b/templates/login.html
@@ -8,19 +8,19 @@
 </head>
 <body>
     <div class="login-container">
-        <h2>Login</h2>
+        <h2 id="label">Login</h2>
         {% for category, message in get_flashed_messages(with_categories=true) %}
-            <div class="flash {{ category }}">
+            <div id="label" class="flash {{ category }}">
                 {{ message }}
             </div>
         {% endfor %}
         <form action="{{ url_for('login') }}" method="post">
             <div class="input-group">
-                <label for="username">Username:</label>
+                <label id="label" for="username">Username:</label>
                 <input type="text" id="username" name="username" required>
             </div>
             <div class="input-group">
-                <label for="password">Password:</label>
+                <label id="label" for="password">Password:</label>
                 <input type="password" id="password" name="password" required>
             </div>
             <button type="submit">Login</button>
