--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,43 +1,120 @@
 * {
-    text-decoration: none;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    list-style: none;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Arial, sans-serif;
 }
 
 body {
-    background: salmon;
+    display: flex;
+    height: 100vh;
+    background-color: #f4f4f4;
+}
+
+.container {
+    display: flex;
+    width: 100%;
 }
 
 .sidebar {
-    align-items: center;
+    width: 10%;
+    color: #ecf0f1;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-.wrapper {
+.profile {
+    text-align: center;
+}
+
+.profile a {
+    text-decoration: none;
+}
+
+.profile a:hover h2 {
+    text-decoration: underline dotted;
+}
+
+.profile-pic {
+    width: 50%;
+    height: 50%;
+    border-radius: 50%;
+    margin-bottom: 10px;
+}
+
+.name {
+    font-size: 18px;
+    margin-bottom: 5px;
+    color: #000;
+}
+
+.username {
+    font-size: 14px;
+    color: #7d8687;
+}
+
+.menu {
+    flex-grow: 1;
     display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.menu ul {
+    list-style: none;
+    padding: 0;
+    flex-grow: 1;
+    text-align: center;
+}
+
+.menu ul li {
+    margin: 8px 0;
+}
+
+.menu ul li a {
+    color: #7d8687;
+    text-decoration: none;
+    font-size: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    transition: background-color 0.3s ease;
     position: relative;
 }
 
-.wrapper .sidebar {
-    position: fixed;
-    background: #fff;
-    width: 200px;
-    height: 100%;
-    padding: 30px 0;
+.menu ul li a img {
+    width: 50%;
+    height: 50%;
+    border-radius: 50%;
+    padding: 10px;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    transform: scale(0.8);
 }
 
-.wrapper .sidebar ul li {
-    padding: 15px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-    border-top: 1px solid rgba(225, 225, 225, 0.05);
+
+.menu ul li a p {
+    margin-top: 5px;
+    font-size: 80%;
 }
 
-.wrapper .sidebar ul li a {
-    color: #bdb8d7;
+.menu ul li a:hover img {
+    background-color: #599aef;
+    transform: scale(1);
 }
 
-#username {
-    color: #000;
+
+hr {
+    border: none;
+    border-top: 1px solid #95a5a6;
+    margin: 15px 0;
+}
+
+.content {
+    width: 80%;
+    padding: 20px;
+    background-color: #ecf0f1;
+    color: #2c3e50;
 }
