--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,7 +8,7 @@
 body {
     display: flex;
     height: 100vh;
-    background-color: #f4f4f4;
+    background-color: #ffffff;
 }
 
 .container {
@@ -19,6 +19,9 @@ body {
 .sidebar {
     width: 10%;
     color: #ecf0f1;
+    border-right: #95a5a6;
+    border-style: solid;
+    border-width:  1px;
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -80,29 +83,29 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px;
+    padding: 1px;
     transition: background-color 0.3s ease;
     position: relative;
 }
 
 .menu ul li a img {
-    width: 50%;
-    height: 50%;
+    width: 60%;
+    height: 60%;
     border-radius: 50%;
     padding: 10px;
     transition: background-color 0.3s ease, transform 0.3s ease;
-    transform: scale(0.8);
+    transform: scale(1);
 }
 
 
 .menu ul li a p {
-    margin-top: 5px;
+    margin-top: 1px;
     font-size: 80%;
 }
 
-.menu ul li a:hover img {
+.hover:hover img {
     background-color: #599aef;
-    transform: scale(1);
+    transform: scale(1.2);
 }
 
 
@@ -113,8 +116,77 @@ hr {
 }
 
 .content {
-    width: 80%;
+    width: 90%;
     padding: 20px;
-    background-color: #ecf0f1;
+    background-color: #ffffff;
     color: #2c3e50;
+}
+
+.top-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 50px;
+    margin-top: 10px;
+}
+
+.search-container {
+    position: relative;
+    width: 300px;
+    margin-left: 200px;
+}
+
+.search-bar {
+    width: 200%;
+    padding: 15px 15px 15px 20px;
+    font-size: 16px;
+    border-radius: 50px;
+    background-color: rgba(235, 231, 231, 0.608);
+    border: 1px solid rgba(235, 231, 231, 0.608);
+    outline: none;
+    transition: border-color 0.3s ease;
+}
+
+.search-icon {
+    position: absolute;
+    left: 185%;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+}
+
+.search-icon img {
+    width: 20px;
+    height: 20px;
+}
+
+.greeting {
+    font-size: 36px;
+    font-weight: bold;
+    color: #2c3e50;
+    margin-right: 200px;
+}
+
+.heading {
+    font-size: 28px;
+    margin-bottom: 20px;
+}
+
+.image-gallery {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.image-gallery img {
+    width: 150px;
+    height: 150px;
+    border-radius: 10px;
+    object-fit: cover;
+    transition: transform 0.3s ease;
+}
+
+.image-gallery img:hover {
+    transform: scale(1.1);
 }
