--- a/CSS/style.css
+++ b/CSS/style.css
@@ -172,21 +172,101 @@ hr {
     margin-bottom: 20px;
 }
 
-.image-gallery {
-    display: flex;
+.card-gallery-container {
+    width: 100%;
+    overflow-x: hidden;
+    white-space: nowrap;
+    padding-bottom: 10px;
+    position: relative;
+}
+
+.card-gallery {
+    display: inline-flex;
     justify-content: space-between;
     gap: 20px;
     margin-top: 20px;
+    padding: 10px;
 }
 
-.image-gallery img {
-    width: 150px;
-    height: 150px;
-    border-radius: 10px;
-    object-fit: cover;
+.card {
+    width: 250px;
+    height:320px;
+    background-color: #ffffff;
+    border-radius: 15px;
+    box-shadow: 8px 4px 18px rgba(116, 115, 115, 0.1);
     transition: transform 0.3s ease;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10px;
 }
 
-.image-gallery img:hover {
-    transform: scale(1.1);
+.card:hover {
+    transform: scale(1.05);
 }
+
+.card-img {
+    width: 114%;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 10px;
+    margin-top: -14px;
+}
+
+.card-info {
+    text-align: center;
+    width: 100%;
+    margin-top: 17px;
+}
+
+.card-title {
+    font-size: 16px;
+    color: #2c3e50;
+    margin-bottom: 5px;
+}
+
+.card-date {
+    border: 1px;
+    border-style: solid;
+    width: 55%;
+    margin-left: 22%;
+    font-size: 12px;
+    font-weight: 700;
+    color: #5f5e5e;
+    border-color: #dcd9d9fc;
+    background-color: #fffefe;
+    margin-top: 20px;
+    border-radius: 3px;
+}
+
+.progress-bar {
+    width: 90%;
+    height: 10px;
+    background-color: #ecf0f1;
+    border-radius: 5px;
+    position: relative;
+    margin-bottom: 5px;
+    margin-top: 30px;
+    margin-left: 11px;
+}
+
+.progress {
+    height: 100%;
+    background-color: #1abc9c;
+    border-radius: 5px;
+    width: 10%;
+}
+
+.progress-percentage {
+    position: relative;
+    top: 5px;
+    right: 52px;
+    font-size: 14px;
+    color: #a2a3a4;
+}
+
+.progress-percentage b {
+    color: rgb(20, 19, 19);
+}
+
